--- a/Assets/Scripts/Device/Device.asmdef
+++ b/Assets/Scripts/Device/Device.asmdef
@@ -1,3 +1,20 @@
 {
-	"name": "Device"
+    "name": "Device",
+    "rootNamespace": "",
+    "references": [
+        "GUID:e757d08a9ef0549e29cdc5f4282101a5",
+        "GUID:560b04d1a97f54a4e82edc0cbbb69285",
+        "GUID:f51ebe6a0ceec4240a699833d6309b23",
+        "GUID:a9420e37d7990b54abdef6688edbe313",
+        "GUID:92703082f92b41ba80f0d6912de66115"
+    ],
+    "includePlatforms": [],
+    "excludePlatforms": [],
+    "allowUnsafeCode": false,
+    "overrideReferences": false,
+    "precompiledReferences": [],
+    "autoReferenced": true,
+    "defineConstraints": [],
+    "versionDefines": [],
+    "noEngineReferences": false
 }
