--- a/Assets/Scripts/Viewer/Viewer.asmdef
+++ b/Assets/Scripts/Viewer/Viewer.asmdef
@@ -1,3 +1,18 @@
 {
-	"name": "Viewer"
+    "name": "Viewer",
+    "rootNamespace": "",
+    "references": [
+        "GUID:560b04d1a97f54a4e82edc0cbbb69285",
+        "GUID:f51ebe6a0ceec4240a699833d6309b23",
+        "GUID:e757d08a9ef0549e29cdc5f4282101a5"
+    ],
+    "includePlatforms": [],
+    "excludePlatforms": [],
+    "allowUnsafeCode": false,
+    "overrideReferences": false,
+    "precompiledReferences": [],
+    "autoReferenced": true,
+    "defineConstraints": [],
+    "versionDefines": [],
+    "noEngineReferences": false
 }
